tests/type_errors/option_unwrap_arithmetic.nos
# expect_error: type mismatch
# Option[String].unwrap() + 1 should fail
main() = {
    x: Option[String] = Some("hello")
    x.unwrap() + 1
}
